--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -95,6 +95,68 @@
     </div>
   </div>
 </section>
+<!-- ===== Signature Treatments Slider ===== -->
+<section class="signature-section" aria-label="Signature Treatments">
+  <h2 class="signature-title" data-i18n="landing.signature.title">
+    טיפולי הדגל שלנו
+  </h2>
+
+  <div class="signature-slider" id="signatureSlider">
+    <div class="signature-track">
+
+      <article class="signature-slide">
+        <h3>Japanese Head Spa | ספא ראש יפני</h3>
+        <p data-i18n="signature.headspa">
+          טיפול יפני מסורתי המשלב ניקוי עמוק של הקרקפת, עיסוי ממוקד, מסכות ייעודיות ופינוקי מים.
+          ממריץ זרימת דם, מחזק שורשי שיער ומרגיע עומסים נפשיים.
+          כולל שטיפה, מגבת חמה, סרום וייבוש מלא.
+          מסתיים במנוחה עם תה וניחוח ארומטי.
+        </p>
+      </article>
+
+      <article class="signature-slide">
+        <h3>Thai Reflexology Foot Massage | עיסוי תאילנדי רפלקסולוגי</h3>
+        <p data-i18n="signature.reflexology">
+          עיסוי תאילנדי ממוקד לכפות הרגליים המבוסס על רפלקסולוגיה.
+          מתבצע עם משחה תאילנדית חריפה ולחיצות עמוקות על נקודות השתקפות.
+          מסייע בהמרצת זרימת הדם ובהשפעה מערכתית.
+        </p>
+      </article>
+
+      <article class="signature-slide">
+        <h3>Sports Massage | עיסוי ספורט</h3>
+        <p data-i18n="signature.sports">
+          עיסוי אינטנסיבי לשחרור עומסים מפעילות גופנית.
+          משלב טכניקות עומק ומתיחות.
+          מסייע בהתאוששות ומניעת פציעות.
+          עיסוי גוף מלא כולל פנים.
+        </p>
+      </article>
+
+      <article class="signature-slide">
+        <h3>Karsai Massage | עיסוי תאילנדי קארסאי – פרימיום</h3>
+        <p data-i18n="signature.karsai">
+          עיסוי תאילנדי מתקדם מהרפואה העתיקה.
+          מתמקד באזורים אנרגטיים עמוקים לאיזון וחיזוק הגוף.
+          טיפול עוצמתי ונישתי למטופלים מנוסים בלבד.
+        </p>
+      </article>
+
+      <article class="signature-slide">
+        <h3>Thai Vitamin E Cream Massage | עיסוי תאילנדי עם קרם ויטמין E</h3>
+        <p data-i18n="signature.vitamine">
+          עיסוי תאילנדי עם קרם מועשר בויטמין E להזנה עמוקה של העור.
+          משפר גמישות, מפחית יובש ומשלב רוגע וטיפוח קוסמטי.
+          עיסוי גוף מלא כולל פנים.
+        </p>
+      </article>
+
+    </div>
+
+    <button class="signature-nav prev">‹</button>
+    <button class="signature-nav next">›</button>
+  </div>
+</section>
 
 
 
@@ -112,15 +174,11 @@
             כולל שטיפה עמוקה, מגבת חמה, סרום ייעודי לקרקפת וייבוש שיער מלא.
             הטיפול מסתיים במנוחה קצרה עם תה וניחוח ארומטי עדין.
           </p>
-          <p class="price">60 דק׳ – 200₾ · 90 דק׳ – 250₾</p>
+          <p class="price">60 דק׳ – 200₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-head" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-head" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -260,16 +318,12 @@
     משפר זרימת דם, מסייע בהפחתת עומס שרירי ומחזיר תחושת קלילות ורעננות.
     הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי עדין באזור הפנים.
   </p>
-  <p class="price">60 דק׳ – 160₾ · 90 דק׳ – 210₾</p>
+  <p class="price">60 דק׳ – 160₾</p>
 
   <div class="duration-options">
     <label>
       <input type="radio" name="dur-swedish" value="60" checked />
       <span data-min="60">60 דק׳</span>
-    </label>
-    <label>
-      <input type="radio" name="dur-swedish" value="90" />
-      <span data-min="90">90 דק׳</span>
     </label>
   </div>
 
@@ -352,15 +406,11 @@
             מתאים במיוחד לעור רגיש ולאחר חשיפה לשמש.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 170₾ · 90 דק׳ – 220₾</p>
+          <p class="price">60 דק׳ – 170₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-aloe" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-aloe" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -385,15 +435,11 @@
             יוצר תחושת רכות והרפיה כללית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 175₾ · 90 דק׳ – 225₾</p>
+          <p class="price">60 דק׳ – 175₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-vit-e" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-vit-e" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -418,15 +464,11 @@
             מתאים למי שמחפש חוויה עדינה ולא אינטנסיבית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 180₾ · 90 דק׳ – 230₾</p>
+          <p class="price">60 דק׳ – 180₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-relax" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-relax" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -451,15 +493,11 @@
             מתאים במיוחד לעור יבש או רגיש.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 175₾ · 90 דק׳ – 225₾</p>
+          <p class="price">60 דק׳ – 175₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-coconut" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-coconut" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -484,15 +522,11 @@
             עיסוי פעיל ודינמי.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 190₾ · 90 דק׳ – 230₾</p>
+          <p class="price">60 דק׳ – 190₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-thai" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -517,15 +551,11 @@
             מתאים לשרירים תפוסים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 190₾ · 90 דק׳ – 240₾</p>
+          <p class="price">60 דק׳ – 190₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-balm" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-balm" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -550,15 +580,11 @@
             מיועד למי שמחפש טיפול אמיתי.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 230₾ · 90 דק׳ – 280₾</p>
+          <p class="price">60 דק׳ – 230₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai-ther" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-thai-ther" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -583,15 +609,11 @@
             מתאים לספורטאים ולאנשים פעילים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 240₾ · 90 דק׳ – 290₾</p>
+          <p class="price">60 דק׳ – 240₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-sports" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-sports" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -616,15 +638,11 @@
             מיועד למטופלים מנוסים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 250₾ · 90 דק׳ – 300₾</p>
+          <p class="price">60 דק׳ – 250₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-deep-cream" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-deep-cream" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -649,15 +667,11 @@
             מתאים לכאבים כרוניים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 230₾ · 90 דק׳ – 280₾</p>
+          <p class="price">60 דק׳ – 230₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-cannabis" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-cannabis" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -711,15 +725,11 @@
             חוויה טיפולית ייחודית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 220₾ · 90 דק׳ – 260₾</p>
+          <p class="price">60 דק׳ – 220₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai-comp-body" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-thai-comp-body" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -744,15 +754,11 @@
             מיועד למטופלים מנוסים בלבד.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 260₾ · 90 דק׳ – 320₾</p>
+          <p class="price">60 דק׳ – 260₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-karsai" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-karsai" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
