--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -67,19 +67,19 @@
 
       <div class="video-slide is-active">
         <video class="video-slide__video" autoplay loop muted playsinline preload="metadata">
-          <source src="assets/videos/slide-1.mp4" type="video/mp4" />
+          <source src="/assets/videos/slide-1.mp4" type="video/mp4" />
         </video>
       </div>
 
       <div class="video-slide">
         <video class="video-slide__video" autoplay loop muted playsinline preload="metadata">
-          <source src="assets/videos/slide-2.mp4" type="video/mp4" />
+          <source src="/assets/videos/slide-2.mp4" type="video/mp4" />
         </video>
       </div>
 
       <div class="video-slide">
         <video class="video-slide__video" autoplay loop muted playsinline preload="metadata">
-          <source src="assets/videos/slide-3.mp4" type="video/mp4" />
+          <source src="/assets/videos/slide-3.mp4" type="video/mp4" />
         </video>
       </div>
 
@@ -95,6 +95,8 @@
     </div>
   </div>
 </section>
+
+
 
       <div class="home-grid">
 
@@ -194,10 +196,14 @@
             בגרסת 60 דקות משולב גם עיסוי כתפיים ופלג גוף עליון.
             מעודד רגיעה עמוקה ואיזון עצבי.
           </p>
-          <p class="price">60 דק׳ – 150₾</p>
+          <p class="price">30 דק׳ – 90₾ · 60 דק׳ – 150₾</p>
           <div class="duration-options">
             <label>
-              <input type="radio" name="dur-face-thai" value="60" checked />
+              <input type="radio" name="dur-face-thai" value="30" checked />
+              <span data-min="30">30 דק׳</span>
+            </label>
+            <label>
+              <input type="radio" name="dur-face-thai" value="60" />
               <span data-min="60">60 דק׳</span>
             </label>
           </div>
@@ -210,32 +216,64 @@
           </button>
         </article>
 
-        <!-- 🇸🇪 Swedish Massage -->
+        <!-- 🌼 Aromatherapy Facial Massage -->
         <article class="product-card">
-          <div class="tag">🇸🇪 עיסוי שוודי</div>
-          <h3 class="product-title">Swedish Massage | עיסוי שוודי</h3>
+          <div class="tag">🌼 עיסוי פנים ארומתרפי</div>
+          <h3 class="product-title">
+            <span>Aromatherapy Facial Massage</span><span> | </span><span>עיסוי פנים ארומתרפי</span>
+          </h3>
           <p>
-            עיסוי גוף מלא קלאסי בתנועות ארוכות, לישה עדינה והנעות זורמות לשחרור מתחים והרגעה עמוקה.
-            משפר זרימת דם, מסייע בהפחתת עומס שרירי ומחזיר תחושת קלילות ורעננות.
-            הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי עדין באזור הפנים.
+            עיסוי פנים עדין עם שמנים אתריים טהורים.
+            הריחות והתנועות הרכות מרגיעים את מערכת העצבים ומשפרים את זרימת הדם בעור.
+            מעניק לעור תחושת רכות וזוהר טבעי.
+            בגרסת 60 דקות כולל עיסוי כתפיים וקרקפת.
           </p>
-          <p class="price">60 דק׳ – 160₾</p>
-
+          <p class="price">30 דק׳ – 80₾ · 60 דק׳ – 140₾</p>
           <div class="duration-options">
             <label>
-              <input type="radio" name="dur-swedish" value="60" checked />
+              <input type="radio" name="dur-face-aroma" value="30" checked />
+              <span data-min="30">30 דק׳</span>
+            </label>
+            <label>
+              <input type="radio" name="dur-face-aroma" value="60" />
               <span data-min="60">60 דק׳</span>
             </label>
           </div>
-
           <button class="button"
                   data-book-btn
-                  data-treatment-key="body-swedish"
-                  data-radio-group="dur-swedish"
+                  data-treatment-key="facial-aroma"
+                  data-radio-group="dur-face-aroma"
                   data-i18n="landing.treatment.book">
             להזמנת הטיפול
           </button>
         </article>
+<!-- 🇸🇪 Swedish Massage -->
+<article class="product-card">
+  <div class="tag">🇸🇪 עיסוי שוודי</div>
+  <h3 class="product-title">Swedish Massage | עיסוי שוודי</h3>
+  <p>
+    עיסוי גוף מלא קלאסי בתנועות ארוכות, לישה עדינה והנעות זורמות לשחרור מתחים והרגעה עמוקה.
+    משפר זרימת דם, מסייע בהפחתת עומס שרירי ומחזיר תחושת קלילות ורעננות.
+    הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי עדין באזור הפנים.
+  </p>
+  <p class="price">60 דק׳ – 160₾</p>
+
+  <div class="duration-options">
+    <label>
+      <input type="radio" name="dur-swedish" value="60" checked />
+      <span data-min="60">60 דק׳</span>
+    </label>
+  </div>
+
+  <button class="button"
+          data-book-btn
+          data-treatment-key="body-swedish"
+          data-radio-group="dur-swedish"
+          data-i18n="landing.treatment.book">
+    להזמנת הטיפול
+  </button>
+</article>
+
 
         <!-- 💪 Deep Thai Oil Back–Neck–Shoulders -->
         <article class="product-card">
@@ -306,7 +344,7 @@
             מתאים במיוחד לעור רגיש ולאחר חשיפה לשמש.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 130₾</p>
+          <p class="price">60 דק׳ – 170₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-aloe" value="60" checked />
@@ -335,7 +373,7 @@
             יוצר תחושת רכות והרפיה כללית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 130₾</p>
+          <p class="price">60 דק׳ – 175₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-vit-e" value="60" checked />
@@ -351,11 +389,11 @@
           </button>
         </article>
 
-        <!-- 🧘 THAI OIL MASSAGE (was Relaxing Oil Massage) -->
+        <!-- 🧘 Relaxing Oil Massage -->
         <article class="product-card">
-          <div class="tag">🧘 THAI OIL MASSAGE</div>
+          <div class="tag">🧘 עיסוי שמן מרגיע</div>
           <h3 class="product-title">
-            <span>THAI OIL MASSAGE</span><span> | </span><span>עיסוי תאילנדי בשמן</span>
+            <span>Relaxing Oil Massage</span><span> | </span><span>עיסוי שמן מרגיע</span>
           </h3>
           <p>
             עיסוי גוף מלא בשמן איכותי בתנועות ארוכות, רכות וזורמות.
@@ -364,7 +402,7 @@
             מתאים למי שמחפש חוויה עדינה ולא אינטנסיבית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 150₾</p>
+          <p class="price">60 דק׳ – 180₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-relax" value="60" checked />
@@ -393,7 +431,7 @@
             מתאים במיוחד לעור יבש או רגיש.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 130₾</p>
+          <p class="price">60 דק׳ – 175₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-coconut" value="60" checked />
@@ -422,7 +460,7 @@
             עיסוי פעיל ודינמי.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 140₾</p>
+          <p class="price">60 דק׳ – 190₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai" value="60" checked />
@@ -451,7 +489,7 @@
             מתאים לשרירים תפוסים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 160₾</p>
+          <p class="price">60 דק׳ – 190₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-balm" value="60" checked />
@@ -480,7 +518,7 @@
             מיועד למי שמחפש טיפול אמיתי.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 200₾</p>
+          <p class="price">60 דק׳ – 230₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai-ther" value="60" checked />
@@ -509,7 +547,7 @@
             מתאים לספורטאים ולאנשים פעילים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 170₾</p>
+          <p class="price">60 דק׳ – 240₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-sports" value="60" checked />
@@ -525,20 +563,20 @@
           </button>
         </article>
 
-        <!-- 💪 Deep Tissue Thai Massage (removed "Cream") -->
+        <!-- 💪 Deep Tissue Thai Massage with Cream -->
         <article class="product-card">
-          <div class="tag">💪 עיסוי תאילנדי עמוק (דיפ טישיו) – פרימיום</div>
+          <div class="tag">💪 עיסוי תאילנדי עמוק עם קרם</div>
           <h3 class="product-title">
-            <span>Deep Tissue Thai Massage</span><span> | </span><span>עיסוי תאילנדי עמוק (דיפ טישיו) – פרימיום</span>
+            <span>Deep Tissue Thai Massage with Cream</span><span> | </span><span>עיסוי תאילנדי עמוק עם קרם</span>
           </h3>
           <p>
             עיסוי תאילנדי עמוק במיוחד לשכבות השריר הפנימיות.
-            משלב לחץ חזק לעבודה טיפולית מדויקת.
+            משלב לחץ חזק עם קרם ייעודי.
             מטפל בעומסים וכאבים כרוניים.
             מיועד למטופלים מנוסים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 170₾</p>
+          <p class="price">60 דק׳ – 250₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-deep-cream" value="60" checked />
@@ -549,6 +587,35 @@
                   data-book-btn
                   data-treatment-key="body-deep-tissue-cream"
                   data-radio-group="dur-deep-cream"
+                  data-i18n="landing.treatment.book">
+            להזמנת הטיפול
+          </button>
+        </article>
+
+        <!-- 🌿 Thai Cannabis Oil Massage -->
+        <article class="product-card">
+          <div class="tag">🌿 עיסוי תאילנדי עם שמן קנאביס</div>
+          <h3 class="product-title">
+            <span>Thai Cannabis Oil Massage</span><span> | </span><span>עיסוי תאילנדי עם שמן קנאביס</span>
+          </h3>
+          <p>
+            עיסוי תאילנדי מתקדם בשמן קנאביס ייעודי.
+            מסייע בהפחתת כאבים, דלקות ומתח שרירי.
+            יוצר תחושת רוגע עמוקה.
+            מתאים לכאבים כרוניים.
+            הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
+          </p>
+          <p class="price">60 דק׳ – 230₾</p>
+          <div class="duration-options">
+            <label>
+              <input type="radio" name="dur-cannabis" value="60" checked />
+              <span data-min="60">60 דק׳</span>
+            </label>
+          </div>
+          <button class="button"
+                  data-book-btn
+                  data-treatment-key="body-cannabis-oil"
+                  data-radio-group="dur-cannabis"
                   data-i18n="landing.treatment.book">
             להזמנת הטיפול
           </button>
@@ -567,7 +634,7 @@
             מתאים לעייפות ומתח מצטבר.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 200₾</p>
+          <p class="price">60 דק׳ – 210₾</p>
           <div class="duration-options" style="display:none;">
             <label>
               <input type="radio" name="dur-body-stone" value="60" checked />
@@ -596,7 +663,7 @@
             חוויה טיפולית ייחודית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 180₾</p>
+          <p class="price">60 דק׳ – 220₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai-comp-body" value="60" checked />
@@ -625,7 +692,7 @@
             מיועד למטופלים מנוסים בלבד.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 180₾</p>
+          <p class="price">60 דק׳ – 260₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-karsai" value="60" checked />
