--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -97,7 +97,6 @@
 </section>
 
 
-
       <div class="home-grid">
 
         <!-- 🌸 Japanese Head Spa -->
@@ -196,14 +195,10 @@
             בגרסת 60 דקות משולב גם עיסוי כתפיים ופלג גוף עליון.
             מעודד רגיעה עמוקה ואיזון עצבי.
           </p>
-          <p class="price">30 דק׳ – 90₾ · 60 דק׳ – 150₾</p>
+          <p class="price">60 דק׳ – 150₾</p>
           <div class="duration-options">
             <label>
-              <input type="radio" name="dur-face-thai" value="30" checked />
-              <span data-min="30">30 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-face-thai" value="60" />
+              <input type="radio" name="dur-face-thai" value="60" checked />
               <span data-min="60">60 דק׳</span>
             </label>
           </div>
@@ -216,64 +211,32 @@
           </button>
         </article>
 
-        <!-- 🌼 Aromatherapy Facial Massage -->
+        <!-- 🇸🇪 Swedish Massage -->
         <article class="product-card">
-          <div class="tag">🌼 עיסוי פנים ארומתרפי</div>
-          <h3 class="product-title">
-            <span>Aromatherapy Facial Massage</span><span> | </span><span>עיסוי פנים ארומתרפי</span>
-          </h3>
+          <div class="tag">🇸🇪 עיסוי שוודי</div>
+          <h3 class="product-title">Swedish Massage | עיסוי שוודי</h3>
           <p>
-            עיסוי פנים עדין עם שמנים אתריים טהורים.
-            הריחות והתנועות הרכות מרגיעים את מערכת העצבים ומשפרים את זרימת הדם בעור.
-            מעניק לעור תחושת רכות וזוהר טבעי.
-            בגרסת 60 דקות כולל עיסוי כתפיים וקרקפת.
+            עיסוי גוף מלא קלאסי בתנועות ארוכות, לישה עדינה והנעות זורמות לשחרור מתחים והרגעה עמוקה.
+            משפר זרימת דם, מסייע בהפחתת עומס שרירי ומחזיר תחושת קלילות ורעננות.
+            הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי עדין באזור הפנים.
           </p>
-          <p class="price">30 דק׳ – 80₾ · 60 דק׳ – 140₾</p>
+          <p class="price">60 דק׳ – 160₾</p>
+
           <div class="duration-options">
             <label>
-              <input type="radio" name="dur-face-aroma" value="30" checked />
-              <span data-min="30">30 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-face-aroma" value="60" />
+              <input type="radio" name="dur-swedish" value="60" checked />
               <span data-min="60">60 דק׳</span>
             </label>
           </div>
+
           <button class="button"
                   data-book-btn
-                  data-treatment-key="facial-aroma"
-                  data-radio-group="dur-face-aroma"
+                  data-treatment-key="body-swedish"
+                  data-radio-group="dur-swedish"
                   data-i18n="landing.treatment.book">
             להזמנת הטיפול
           </button>
         </article>
-<!-- 🇸🇪 Swedish Massage -->
-<article class="product-card">
-  <div class="tag">🇸🇪 עיסוי שוודי</div>
-  <h3 class="product-title">Swedish Massage | עיסוי שוודי</h3>
-  <p>
-    עיסוי גוף מלא קלאסי בתנועות ארוכות, לישה עדינה והנעות זורמות לשחרור מתחים והרגעה עמוקה.
-    משפר זרימת דם, מסייע בהפחתת עומס שרירי ומחזיר תחושת קלילות ורעננות.
-    הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי עדין באזור הפנים.
-  </p>
-  <p class="price">60 דק׳ – 160₾</p>
-
-  <div class="duration-options">
-    <label>
-      <input type="radio" name="dur-swedish" value="60" checked />
-      <span data-min="60">60 דק׳</span>
-    </label>
-  </div>
-
-  <button class="button"
-          data-book-btn
-          data-treatment-key="body-swedish"
-          data-radio-group="dur-swedish"
-          data-i18n="landing.treatment.book">
-    להזמנת הטיפול
-  </button>
-</article>
-
 
         <!-- 💪 Deep Thai Oil Back–Neck–Shoulders -->
         <article class="product-card">
@@ -344,7 +307,7 @@
             מתאים במיוחד לעור רגיש ולאחר חשיפה לשמש.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 170₾</p>
+          <p class="price">60 דק׳ – 130₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-aloe" value="60" checked />
@@ -373,7 +336,7 @@
             יוצר תחושת רכות והרפיה כללית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 175₾</p>
+          <p class="price">60 דק׳ – 130₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-vit-e" value="60" checked />
@@ -389,11 +352,11 @@
           </button>
         </article>
 
-        <!-- 🧘 Relaxing Oil Massage -->
+        <!-- 🧘 THAI OIL MASSAGE (was Relaxing Oil Massage) -->
         <article class="product-card">
-          <div class="tag">🧘 עיסוי שמן מרגיע</div>
+          <div class="tag">🧘 THAI OIL MASSAGE</div>
           <h3 class="product-title">
-            <span>Relaxing Oil Massage</span><span> | </span><span>עיסוי שמן מרגיע</span>
+            <span>THAI OIL MASSAGE</span><span> | </span><span>עיסוי תאילנדי בשמן</span>
           </h3>
           <p>
             עיסוי גוף מלא בשמן איכותי בתנועות ארוכות, רכות וזורמות.
@@ -402,7 +365,7 @@
             מתאים למי שמחפש חוויה עדינה ולא אינטנסיבית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 180₾</p>
+          <p class="price">60 דק׳ – 150₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-relax" value="60" checked />
@@ -431,7 +394,7 @@
             מתאים במיוחד לעור יבש או רגיש.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 175₾</p>
+          <p class="price">60 דק׳ – 130₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-coconut" value="60" checked />
@@ -460,7 +423,7 @@
             עיסוי פעיל ודינמי.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 190₾</p>
+          <p class="price">60 דק׳ – 140₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai" value="60" checked />
@@ -489,7 +452,7 @@
             מתאים לשרירים תפוסים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 190₾</p>
+          <p class="price">60 דק׳ – 160₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-balm" value="60" checked />
@@ -518,7 +481,7 @@
             מיועד למי שמחפש טיפול אמיתי.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 230₾</p>
+          <p class="price">60 דק׳ – 200₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai-ther" value="60" checked />
@@ -547,7 +510,7 @@
             מתאים לספורטאים ולאנשים פעילים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 240₾</p>
+          <p class="price">60 דק׳ – 170₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-sports" value="60" checked />
@@ -563,20 +526,20 @@
           </button>
         </article>
 
-        <!-- 💪 Deep Tissue Thai Massage with Cream -->
+        <!-- 💪 Deep Tissue Thai Massage (removed "Cream") -->
         <article class="product-card">
-          <div class="tag">💪 עיסוי תאילנדי עמוק עם קרם</div>
+          <div class="tag">💪 עיסוי תאילנדי עמוק (דיפ טישיו) – פרימיום</div>
           <h3 class="product-title">
-            <span>Deep Tissue Thai Massage with Cream</span><span> | </span><span>עיסוי תאילנדי עמוק עם קרם</span>
+            <span>Deep Tissue Thai Massage</span><span> | </span><span>עיסוי תאילנדי עמוק (דיפ טישיו) – פרימיום</span>
           </h3>
           <p>
             עיסוי תאילנדי עמוק במיוחד לשכבות השריר הפנימיות.
-            משלב לחץ חזק עם קרם ייעודי.
+            משלב לחץ חזק לעבודה טיפולית מדויקת.
             מטפל בעומסים וכאבים כרוניים.
             מיועד למטופלים מנוסים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 250₾</p>
+          <p class="price">60 דק׳ – 170₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-deep-cream" value="60" checked />
@@ -587,35 +550,6 @@
                   data-book-btn
                   data-treatment-key="body-deep-tissue-cream"
                   data-radio-group="dur-deep-cream"
-                  data-i18n="landing.treatment.book">
-            להזמנת הטיפול
-          </button>
-        </article>
-
-        <!-- 🌿 Thai Cannabis Oil Massage -->
-        <article class="product-card">
-          <div class="tag">🌿 עיסוי תאילנדי עם שמן קנאביס</div>
-          <h3 class="product-title">
-            <span>Thai Cannabis Oil Massage</span><span> | </span><span>עיסוי תאילנדי עם שמן קנאביס</span>
-          </h3>
-          <p>
-            עיסוי תאילנדי מתקדם בשמן קנאביס ייעודי.
-            מסייע בהפחתת כאבים, דלקות ומתח שרירי.
-            יוצר תחושת רוגע עמוקה.
-            מתאים לכאבים כרוניים.
-            הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
-          </p>
-          <p class="price">60 דק׳ – 230₾</p>
-          <div class="duration-options">
-            <label>
-              <input type="radio" name="dur-cannabis" value="60" checked />
-              <span data-min="60">60 דק׳</span>
-            </label>
-          </div>
-          <button class="button"
-                  data-book-btn
-                  data-treatment-key="body-cannabis-oil"
-                  data-radio-group="dur-cannabis"
                   data-i18n="landing.treatment.book">
             להזמנת הטיפול
           </button>
@@ -634,7 +568,7 @@
             מתאים לעייפות ומתח מצטבר.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 210₾</p>
+          <p class="price">60 דק׳ – 200₾</p>
           <div class="duration-options" style="display:none;">
             <label>
               <input type="radio" name="dur-body-stone" value="60" checked />
@@ -663,7 +597,7 @@
             חוויה טיפולית ייחודית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 220₾</p>
+          <p class="price">60 דק׳ – 180₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai-comp-body" value="60" checked />
@@ -692,7 +626,7 @@
             מיועד למטופלים מנוסים בלבד.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 260₾</p>
+          <p class="price">60 דק׳ – 180₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-karsai" value="60" checked />
