--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -90,8 +90,8 @@
 
     <div class="video-slider__dots" aria-label="Slider dots">
       <button class="video-slider__dot is-active" type="button"></button>
-      <button class="video-slider__dot" type="button"></button>
-      <button class="video-slider__dot" type="button"></button>
+      <button class="video-slider__dot is-active" type="button"></button>
+      <button class="video-slider__dot is-active" type="button"></button>
     </div>
   </div>
 </section>
