--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -88,12 +88,11 @@
     <button class="video-slider__nav video-slider__nav--prev" type="button" aria-label="Previous">‹</button>
     <button class="video-slider__nav video-slider__nav--next" type="button" aria-label="Next">›</button>
 
-    <div class="video-slider__dots" aria-label="Slider dots">
-      <button class="video-slider__dot is-active" type="button"></button>
-      <button class="video-slider__dot is-active" type="button"></button>
-      <button class="video-slider__dot is-active" type="button"></button>
-    </div>
-  </div>
+<div class="video-slider__dots" aria-label="Slider dots">
+  <button class="video-slider__dot is-active" type="button"></button>
+  <button class="video-slider__dot" type="button"></button>
+  <button class="video-slider__dot" type="button"></button>
+</div>
 </section>
 
 
